--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Etch-a-Sketch</title>
-  </head>
-  <body>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
     <main>
-        <h1>build a browser version of something between a sketchpad and an Etch-A-Sketch</h1>  
+        <button id="changeSize">Change Grid Size</button>
+        <div id="gridContainer"></div>
     </main>
-	<script src="index.js"></script>
-  </body>
+    <script src="index.js"></script>
+</body>
 </html>
